--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   audioplayers: ^5.2.1
   sensors_plus: ^4.0.2
   fluttertoast: ^8.2.4
+  audioplayers_linux: ^3.1.0
 
 dev_dependencies:
   flutter_test:
